<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_admin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/disable_device_admin"
        />

    <Button
        android:id="@+id/disable_device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_device_admin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/get_dns_button"
        />

    <Button
        android:id="@+id/get_dns_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_dns"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disable_device_admin"
        app:layout_constraintBottom_toBottomOf="@id/text_dns_server"
        />

    <EditText
        android:id="@+id/text_dns_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_dns_button"
        app:layout_constraintBottom_toBottomOf="@id/set_dns_button"
        android:hint="@string/dns_adguard_com"
        android:text="@string/dns_adguard_com"
        android:inputType="text"
        android:autofillHints="dns.adguard.com" />

    <Button
        android:id="@+id/set_dns_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_dns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dns_server"
        />

</androidx.constraintlayout.widget.ConstraintLayout>